unavailable candidates and about page with counts

--- a/recruit-gui/src/assets/i18n/XXXXXnl.json
+++ b/recruit-gui/src/assets/i18n/XXXXXnl.json
@@ -164,12 +164,37 @@
 	"arenella-faqs-q11-answer-nl": "Nederlands",
 	"arenella-faqs-q11-answer-summary": "U kunt filteren op kandidaten die de taal spreken waarnaar u op zoek bent",
 	"arenella-faqs-q11-question": "Welke talen spreken de kandidaten",
-	"arenella-home-intro-1": "Arenella-ICT est une plateforme conçue pour rassembler les candidats informatiques qui recherchent activement leur prochain rôle, avec les recruteurs informatiques et les responsables du recrutement qui\n            cherchent à les placer.",
-	"arenella-home-intro-2": "Arenella-ICT is echter veel meer. Het is ook een ontmoetingsplaats om de samenwerking tussen recruiters te bevorderen door de mogelijkheid daartoe te bieden\n            samenwerken om rollen te vinden en te vervullen. Wij bieden de tools die nodig zijn om u bij deze samenwerking te helpen.",
-	"arenella-home-intro-3": "De site is ontwikkeld en verfijnd om de taken die u uitvoert zoveel mogelijk te automatiseren. Of het nu gaat om het zoeken naar cv's van kandidaten om te downloaden of om te adverteren\n            een open rol die je probeert te vervullen. De site maakt gebruik van algoritme- en automatiseringstechnieken om u tijd te besparen en u te helpen snel uw doelen te bereiken.",
-	"arenella-home-intro-4": "Arenella-ICT richt zich momenteel op IT-kandidaten gevestigd in Nederland, België, Groot-Brittannië en Ierland. De kandidaten die wij beschikbaar stellen zijn zowel gevestigd in als hebben\n            het recht om op een van deze locaties te werken.",
-	"arenella-home-sub-title": "CV-database voor IT-kandidaten - IT-vacaturebank - IT-marktplaats",
-	"arenella-home-title": "Welkom bij Arenella-ICT",
+	"arenella-homepage-candidates-1": "Kandidaten hebben hun CV naar de site geüpload of hebben daar toestemming voor gegeven met de bedoeling dat recruiters contact met hen opnemen. Onze kandidaten staan ​​open voor samenwerking met recruiters en zijn actief op zoek naar een nieuwe rol via een recruitmentbureau.",
+	"arenella-homepage-candidates-2": "",
+	"arenella-homepage-candidates-3": "We controleren de beschikbaarheid van kandidaten ongeveer elke twee weken om de beschikbaarheid te garanderen op basis van hun LI-status. Zodra een kandidaat niet meer beschikbaar is, wordt deze uit de zoekresultaten verwijderd. Vervolgens wordt elke twee maanden hun status gecontroleerd om te bepalen of ze beschikbaar zijn gekomen. Wij streven ernaar om de kosten die u besteedt aan het contacteren van kandidaten die niet actief op zoek zijn naar een functie, te verminderen.",
+	"arenella-homepage-candidates-4": "Kandidaten zijn gevestigd in Nederland, België, Groot-Brittannië en Ierland en hebben recht op werk. Voor de meeste soorten IT-functies zijn er kandidaten op zowel vaste als freelance basis. Er zijn Engels-, Nederlands- en Franstalige kandidaten.\t",
+	"arenella-homepage-fees-1": "U zult blij zijn te horen dat er geen extra marges of kosten verbonden zijn aan het plaatsen van een kandidaat. De enige betaling is het jaarabonnement als u kiest voor een betaald abonnement in plaats van een gratis abonnement op basis van krediet.",
+	"arenella-homepage-fees-2": "Arenella-ICT is een platform en wij werken zelf niet als wervingsbureau. Wanneer u een kandidaat plaatst, is er dus sprake van een contract tussen u en de kandidaat. Arenella-ICT houdt zich buiten contracten en onderhandelingen.",
+	"arenella-homepage-func-jb-desc": "Een vacaturebank voor het adverteren van functies voor kandidaten, zowel geregistreerd als niet-geregistreerd bij het platform",
+	"arenella-homepage-func-jb-title": "Banen",
+	"arenella-homepage-func-market-desc": "Een manier voor recruiters om samen te werken aan functies die ze willen vervullen en kandidaten die ze willen plaatsen.",
+	"arenella-homepage-func-market-title": "Marktplaats",
+	"arenella-homepage-func-news-desc": "Inzicht in kandidaat-updates (beschikbaarheid, CV-update, profielupdate)",
+	"arenella-homepage-func-news-title": "Nieuwsfeed",
+	"arenella-homepage-func-suggestions-desc": "Een CV-database met geavanceerde algoritmen om binnen enkele seconden de beste kandidaten te vinden.",
+	"arenella-homepage-func-suggestions-title": "Suggesties",
+	"arenella-homepage-getting-started": "De eerste stap is het aanmaken van een account. Er wordt gevraagd naar uw naam, uw e-mailadres en bedrijfsnaam. U ontvangt een e-mail met uw inloggegevens. Na 30 dagen onbeperkte toegang heb je de mogelijkheid om door te gaan met een gratis op krediet gebaseerd abonnement of met een betaald abonnement met onbeperkte toegang tot de recruiterfuncties.",
+	"arenella-homepage-title-candidates": "De kandidaten",
+	"arenella-homepage-title-fees": "Tarieven en contracten",
+	"arenella-homepage-title-functionality": "Functionaliteit",
+	"arenella-homepage-title-getting-started": "Ermee beginnen",
+	"arenella-homepage-title-intro": "Invoering",
+	"arenella-homepage-title-intro-text": "Arenella-ICT is een platform voor IT-recruiters om direct beschikbare kandidaten te vinden. Wij bieden een reeks functionaliteiten, geoptimaliseerd om u te helpen de beste kandidaten in de kortst mogelijke tijd te vinden.",
+	"arenella-homepage-title-pricing": "Prijzen plannen",
+	"arenella-homepage-title-pricing-plan-cost": "Kosten",
+	"arenella-homepage-title-pricing-plan-credit-desc": "Wekelijkse krediettoewijzing voor toegang tot sitefuncties.",
+	"arenella-homepage-title-pricing-plan-credit-name": "Krediet gebaseerde toegang",
+	"arenella-homepage-title-pricing-plan-credit-price": "Gratis",
+	"arenella-homepage-title-pricing-plan-description": "Omschrijving",
+	"arenella-homepage-title-pricing-plan-name": "Plan naam",
+	"arenella-homepage-title-pricing-plan-paid-desc": "Onbeperkte toegang tot alle Recruiter-functies op de site.",
+	"arenella-homepage-title-pricing-plan-paid-name": "Betaald abonnement",
+	"arenella-homepage-title-pricing-plan-paid-price": "120 euro per jaar ex BTW",
 	"arenella-infobox-contact": "Contact",
 	"arenella-listing-btn-back": "Terug",
 	"arenella-listing-btn-create": "Maak Alert",
@@ -634,6 +659,7 @@
 	"arenella-suggestions-paid-subscription-option": "Betaalde abonnementsfunctie",
 	"arenella-suggestions-paid-subscription-text-1": "Deze optie is alleen beschikbaar voor gebruikers met een betaald abonnement.",
 	"arenella-suggestions-paid-subscription-text-2": "U kunt een betaald abonnement kiezen door op de volgende link te klikken",
+	"arenella-suggestions-paid-subscription-text-3": "Totaal aantal niet-beschikbare kandidaten",
 	"arenella-suggestions-permanent": "Vaste",
 	"arenella-suggestions-profile-box-contact-btn-send": "Versturen",
 	"arenella-suggestions-profile-box-contact-hdr": "Bericht kandidaat",
