--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -164,12 +164,37 @@
 	"arenella-faqs-q11-answer-nl": "Dutch",
 	"arenella-faqs-q11-answer-summary": "You can filter on candidates that speak the language you are looking for",
 	"arenella-faqs-q11-question": "What languages do the candidates speak",
-	"arenella-home-intro-1": "Arenella-ICT is a platform designed to bring together IT candidates which are actively looking for their next role, with the IT recruiters and hiring manager that \n            are looking to place them. ",
-	"arenella-home-intro-2": "Arenella-ICT is however much more. It is also a meeting place to promote recruiter to recruiter collaboration by providing the opportunity to \n            work together to source and fill roles. We provide the tooling necessary to assist you with this collaboration.",
-	"arenella-home-intro-3": "The site has been developed and refined to automate the tasks you undertake as much as possible. Be that searching for Candidate CVs to download or advertising \n            an open role you are trying to fill. The site employs algorithm and automation techniques to save you time to facilitate you in quickly reaching your goals.",
-	"arenella-home-intro-4": "Arenella-ICT currently focuses on IT Candidates based in the Netherlands, Belgium, the UK and Ireland. The candidates we make available are both based in and have \n            the right to work in one of these locations. ",
-	"arenella-home-sub-title": "IT Candidate CV Database - IT Job board - IT Marketplace",
-	"arenella-home-title": "Welcome to Arenella-ICT",
+	"arenella-homepage-candidates-1": "Candidates have either uploaded their CV to the site or have given permission for that to happen with the\n\t\t\t\tintention of having recruiters contact them. Our candidates are open to working with recruiters and actively\n\t\t\t\tlooking for a new role via a recruitment agency.",
+	"arenella-homepage-candidates-2": "Candidate no longer available are removed from the search results. Their status is then checked every two month to determine if they have become available. We aim to reduce the your spent contacting candidates that are not actively looking for a role.",
+	"arenella-homepage-candidates-3": "We check candidate availability roughly every two weeks to ensure availability based upon their LI status. Once\na candidate is no longer available they are removed from the search results. Their status is then checked every\ntwo month to determines if they have become available. We aim to reduce the your spent contacting candidates\nthat are not actively looking for a role.",
+	"arenella-homepage-candidates-4": "Candidates are based in the Netherlands, Belgium, UK and Ireland and have the right to work. There are candidates for most types of IT function on both a permanent and freelance basis. There are English, Dutch and French speaking candidates.\t",
+	"arenella-homepage-fees-1": "You will be pleased to hear there are no additional margins or fees for placing a candidate. The only payment is the yearly subscription in the case you opt for a paid, rather than free credit based subscription.",
+	"arenella-homepage-fees-2": "Arenella-ICT is a platform and we do not work as a recruitment agency ourselves. Therefore when you place a candidate any contract is between you and the candidate. Arenella-ICT stays out of contracts and negotiations.",
+	"arenella-homepage-func-jb-desc": "A Job board for advertising roles to candidates both registered and unregistered with the platform",
+	"arenella-homepage-func-jb-title": "Job Board",
+	"arenella-homepage-func-market-desc": "A way for recruiters to collaborate on roles they are looking to fill and candidates they are looking to place.",
+	"arenella-homepage-func-market-title": "Marketplace",
+	"arenella-homepage-func-news-desc": "Insight into candidate updates (availability, CV update, profile update)",
+	"arenella-homepage-func-news-title": "News Feed",
+	"arenella-homepage-func-suggestions-desc": "A CV database with advanced algorithms to find the best candidates in a matter of seconds.",
+	"arenella-homepage-func-suggestions-title": "Suggestions",
+	"arenella-homepage-getting-started": "The first step is to create an account. You will be asked for your name, your email address and company name. You will receive an email with your login details. After 30 days of unlimited access you have the option to continue with a free credit based plan or with a paid subscription with unlimited access to the recruiter features.",
+	"arenella-homepage-title-candidates": "The Candidates",
+	"arenella-homepage-title-fees": "Fees and Contracts",
+	"arenella-homepage-title-functionality": "Functionality",
+	"arenella-homepage-title-getting-started": "Getting started",
+	"arenella-homepage-title-intro": "Introduction",
+	"arenella-homepage-title-intro-text": "Arenella-ICT is a platform for IT recruiters to find immediately available candidates. We provide a suite of functionality, optimized to help you find the best candidates in the shortest time possible.",
+	"arenella-homepage-title-pricing": "Pricing plans",
+	"arenella-homepage-title-pricing-plan-cost": "Cost",
+	"arenella-homepage-title-pricing-plan-credit-desc": "Weekly credit allocation to access site features.",
+	"arenella-homepage-title-pricing-plan-credit-name": "Credit Based Access",
+	"arenella-homepage-title-pricing-plan-credit-price": "Free",
+	"arenella-homepage-title-pricing-plan-description": "Description",
+	"arenella-homepage-title-pricing-plan-name": "Plan name",
+	"arenella-homepage-title-pricing-plan-paid-desc": "Unlimited access to all Recruiter features on the site.",
+	"arenella-homepage-title-pricing-plan-paid-name": "Paid subscription",
+	"arenella-homepage-title-pricing-plan-paid-price": "120 euros per year ex tax",
 	"arenella-infobox-contact": "Contact",
 	"arenella-listing-btn-back": "Back",
 	"arenella-listing-btn-create": "Create Alert",
@@ -634,6 +659,7 @@
 	"arenella-suggestions-paid-subscription-option": "Paid subscription feature",
 	"arenella-suggestions-paid-subscription-text-1": "This options is only available to users with a paid subscription.",
 	"arenella-suggestions-paid-subscription-text-2": "You can choose a paid subscription by clicking on the following link",
+	"arenella-suggestions-paid-subscription-text-3": "Total unavailable Candidates",
 	"arenella-suggestions-permanent": "Perm",
 	"arenella-suggestions-profile-box-contact-btn-send": "Send",
 	"arenella-suggestions-profile-box-contact-hdr": "Message Candidate",
