--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -164,12 +164,37 @@
 	"arenella-faqs-q11-answer-nl": "Dutch",
 	"arenella-faqs-q11-answer-summary": "You can filter on candidates that speak the language you are looking for",
 	"arenella-faqs-q11-question": "What languages do the candidates speak",
-	"arenella-home-intro-1": "Arenella-ICT is a platform designed to bring together IT candidates which are actively looking for their next role, with the IT recruiters and hiring manager that \n            are looking to place them. ",
-	"arenella-home-intro-2": "Arenella-ICT is however much more. It is also a meeting place to promote recruiter to recruiter collaboration by providing the opportunity to \n            work together to source and fill roles. We provide the tooling necessary to assist you with this collaboration.",
-	"arenella-home-intro-3": "The site has been developed and refined to automate the tasks you undertake as much as possible. Be that searching for Candidate CVs to download or advertising \n            an open role you are trying to fill. The site employs algorithm and automation techniques to save you time to facilitate you in quickly reaching your goals.",
-	"arenella-home-intro-4": "Arenella-ICT currently focuses on IT Candidates based in the Netherlands, Belgium, the UK and Ireland. The candidates we make available are both based in and have \n            the right to work in one of these locations. ",
-	"arenella-home-sub-title": "IT Candidate CV Database - IT Job board - IT Marketplace",
-	"arenella-home-title": "Welcome to Arenella-ICT",
+	"arenella-homepage-candidates-1": "Los candidatos han subido su CV al sitio o han dado permiso para que esto suceda con la intención de que los reclutadores se pongan en contacto con ellos. Nuestros candidatos están abiertos a trabajar con reclutadores y a buscar activamente un nuevo puesto a través de una agencia de contratación.",
+	"arenella-homepage-candidates-2": "Los candidatos que ya no están disponibles se eliminan de los resultados de búsqueda. Luego se verifica su estado cada dos meses para determinar si están disponibles. Nuestro objetivo es reducir el gasto que dedica a contactar candidatos que no están buscando activamente un puesto.",
+	"arenella-homepage-candidates-3": "Verificamos la disponibilidad de los candidatos aproximadamente cada dos semanas para garantizar la disponibilidad según su estado LI. Una vez que un candidato ya no está disponible, se elimina de los resultados de búsqueda. Luego se verifica su estado cada dos meses para determinar si están disponibles. Nuestro objetivo es reducir el gasto que dedica a contactar candidatos que no están buscando activamente un puesto.",
+	"arenella-homepage-candidates-4": "Los candidatos residen en los Países Bajos, Bélgica, el Reino Unido e Irlanda y tienen derecho a trabajar. Hay candidatos para la mayoría de los tipos de funciones de TI, tanto de forma permanente como independiente. Hay candidatos de habla inglesa, holandesa y francesa.\t",
+	"arenella-homepage-fees-1": "Le complacerá saber que no existen márgenes ni tarifas adicionales por colocar a un candidato. El único pago es la suscripción anual en caso de que opte por una suscripción paga, en lugar de una suscripción gratuita basada en crédito.",
+	"arenella-homepage-fees-2": "Arenella-ICT es una plataforma y no trabajamos como agencia de contratación. Por lo tanto, cuando usted coloca un candidato, cualquier contrato es entre usted y el candidato. Arenella-ICT se mantiene al margen de contratos y negociaciones.",
+	"arenella-homepage-func-jb-desc": "Bolsa de trabajo para publicidad de puestos a candidatos tanto registrados como no registrados en la plataforma.",
+	"arenella-homepage-func-jb-title": "Trabajo",
+	"arenella-homepage-func-market-desc": "Una forma para que los reclutadores colaboren en los roles que buscan cubrir y los candidatos que buscan ubicar.",
+	"arenella-homepage-func-market-title": "Mercado",
+	"arenella-homepage-func-news-desc": "Información sobre las actualizaciones de los candidatos (disponibilidad, actualización de CV, actualización de perfil)",
+	"arenella-homepage-func-news-title": "Noticias",
+	"arenella-homepage-func-suggestions-desc": "Una base de datos de CV con algoritmos avanzados para encontrar a los mejores candidatos en cuestión de segundos.",
+	"arenella-homepage-func-suggestions-title": "Sugerencias",
+	"arenella-homepage-getting-started": "El primer paso es crear una cuenta. Se le pedirá su nombre, su dirección de correo electrónico y el nombre de su empresa. Recibirás un correo electrónico con tus datos de acceso. Después de 30 días de acceso ilimitado, tienes la opción de continuar con un plan gratuito basado en crédito o con una suscripción paga con acceso ilimitado a las funciones del reclutador.",
+	"arenella-homepage-title-candidates": "Los candidatos",
+	"arenella-homepage-title-fees": "Tarifas y contratos",
+	"arenella-homepage-title-functionality": "Funcionalidad",
+	"arenella-homepage-title-getting-started": "Empezando",
+	"arenella-homepage-title-intro": "Introducción",
+	"arenella-homepage-title-intro-text": "Arenella-ICT es una plataforma para que los reclutadores de TI encuentren candidatos disponibles de inmediato. Proporcionamos un conjunto de funciones optimizadas para ayudarle a encontrar los mejores candidatos en el menor tiempo posible.",
+	"arenella-homepage-title-pricing": "Planes de precios",
+	"arenella-homepage-title-pricing-plan-cost": "Costo",
+	"arenella-homepage-title-pricing-plan-credit-desc": "Asignación de crédito semanal para acceder a las funciones del sitio.",
+	"arenella-homepage-title-pricing-plan-credit-name": "Acceso basado en crédito",
+	"arenella-homepage-title-pricing-plan-credit-price": "Gratis",
+	"arenella-homepage-title-pricing-plan-description": "Descripción",
+	"arenella-homepage-title-pricing-plan-name": "Nombre del plan",
+	"arenella-homepage-title-pricing-plan-paid-desc": "Acceso ilimitado a todas las funciones de Recruiter en el sitio.",
+	"arenella-homepage-title-pricing-plan-paid-name": "Suscripción paga",
+	"arenella-homepage-title-pricing-plan-paid-price": "120 euros al año sin impuestos",
 	"arenella-infobox-contact": "Contacto",
 	"arenella-listing-btn-back": "Regreso",
 	"arenella-listing-btn-create": "Crear alerta",
@@ -634,6 +659,7 @@
 	"arenella-suggestions-paid-subscription-option": "Función de suscripción paga",
 	"arenella-suggestions-paid-subscription-text-1": "Esta opción solo está disponible para usuarios con una suscripción paga.",
 	"arenella-suggestions-paid-subscription-text-2": "Puedes elegir una suscripción paga haciendo clic en el siguiente enlace",
+	"arenella-suggestions-paid-subscription-text-3": "Total de candidatos no disponibles",
 	"arenella-suggestions-permanent": "Perm",
 	"arenella-suggestions-profile-box-contact-btn-send": "Enviar",
 	"arenella-suggestions-profile-box-contact-hdr": "Mensaje candidato",
