--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -164,12 +164,37 @@
 	"arenella-faqs-q11-answer-nl": "Néerlandais",
 	"arenella-faqs-q11-answer-summary": "Vous pouvez filtrer sur les candidats qui parlent la langue que vous recherchez",
 	"arenella-faqs-q11-question": "Quelles langues parlent les candidats",
-	"arenella-home-intro-1": "Arenella-ICT is een platform dat is ontworpen om IT-kandidaten die actief op zoek zijn naar hun volgende rol samen te brengen met de IT-recruiters en rekruteringsmanagers die\n            ben aan het kijken om ze te plaatsen.",
-	"arenella-home-intro-2": "Arenella-ICT est cependant bien plus. C'est également un lieu de rencontre pour favoriser la collaboration entre recruteurs en offrant l'opportunité de\n            travailler ensemble pour trouver et pourvoir des rôles. Nous fournissons les outils nécessaires pour vous accompagner dans cette collaboration.",
-	"arenella-home-intro-3": "Le site a été développé et affiné pour automatiser autant que possible les tâches que vous entreprenez. Qu'il s'agisse de rechercher des CV de candidats à télécharger ou de faire de la publicité\n            un rôle ouvert que vous essayez de remplir. Le site utilise des algorithmes et des techniques d'automatisation pour vous faire gagner du temps afin de vous aider à atteindre rapidement vos objectifs.",
-	"arenella-home-intro-4": "Arenella-ICT se concentre actuellement sur les candidats informatiques basés aux Pays-Bas, en Belgique, au Royaume-Uni et en Irlande. Les candidats que nous mettons à disposition sont à la fois basés et possèdent\n            le droit de travailler dans l’un de ces endroits.",
-	"arenella-home-sub-title": "Base de données de CV des candidats en informatique - Site d'emploi informatique - IT Marketplace",
-	"arenella-home-title": "Bienvenue à Arenella-ICT",
+	"arenella-homepage-candidates-1": "Les candidats ont soit téléchargé leur CV sur le site, soit donné leur autorisation dans le but d&#39;être contactés par des recruteurs. Nos candidats sont ouverts à travailler avec des recruteurs et recherchent activement un nouveau rôle via une agence de recrutement.",
+	"arenella-homepage-candidates-2": "Les candidats qui ne sont plus disponibles sont supprimés des résultats de recherche. Leur statut est ensuite vérifié tous les deux mois pour déterminer s&#39;ils sont devenus disponibles. Notre objectif est de réduire vos dépenses en contact avec des candidats qui ne recherchent pas activement un poste.",
+	"arenella-homepage-candidates-3": "Nous vérifions la disponibilité des candidats environ toutes les deux semaines pour garantir la disponibilité en fonction de leur statut LI. Lorsqu&#39;un candidat n&#39;est plus disponible, il est supprimé des résultats de recherche. Leur statut est ensuite vérifié tous les deux mois pour déterminer s&#39;ils sont devenus disponibles. Notre objectif est de réduire vos dépenses en contact avec des candidats qui ne recherchent pas activement un poste.",
+	"arenella-homepage-candidates-4": "Les candidats sont basés aux Pays-Bas, en Belgique, au Royaume-Uni et en Irlande et ont le droit de travailler. Il existe des candidats pour la plupart des types de fonctions informatiques, en tant que permanents ou indépendants. Il y a des candidats anglophones, néerlandais et francophones.\t",
+	"arenella-homepage-fees-1": "Vous serez heureux d’apprendre qu’il n’y a pas de marges ni de frais supplémentaires pour placer un candidat. Le seul paiement est l&#39;abonnement annuel dans le cas où vous optez pour un abonnement payant plutôt que gratuit basé sur un crédit.",
+	"arenella-homepage-fees-2": "Arenella-ICT est une plateforme et nous ne travaillons pas nous-mêmes comme une agence de recrutement. Par conséquent, lorsque vous placez un candidat, tout contrat est conclu entre vous et le candidat. Arenella-ICT reste en dehors des contrats et des négociations.",
+	"arenella-homepage-func-jb-desc": "Un site d&#39;emploi pour annoncer des postes aux candidats inscrits et non inscrits sur la plateforme",
+	"arenella-homepage-func-jb-title": "Emplois",
+	"arenella-homepage-func-market-desc": "Un moyen pour les recruteurs de collaborer sur les postes qu&#39;ils cherchent à pourvoir et les candidats qu&#39;ils cherchent à placer.",
+	"arenella-homepage-func-market-title": "Marché",
+	"arenella-homepage-func-news-desc": "Aperçu des mises à jour des candidats (disponibilité, mise à jour du CV, mise à jour du profil)",
+	"arenella-homepage-func-news-title": "Nouvelles",
+	"arenella-homepage-func-suggestions-desc": "Une base de CV avec des algorithmes avancés pour trouver les meilleurs candidats en quelques secondes.",
+	"arenella-homepage-func-suggestions-title": "Suggestions",
+	"arenella-homepage-getting-started": "La première étape consiste à créer un compte. Il vous sera demandé votre nom, votre adresse e-mail et le nom de votre entreprise. Vous recevrez un email avec vos informations de connexion. Après 30 jours d&#39;accès illimité, vous avez la possibilité de continuer avec un forfait gratuit basé sur des crédits ou avec un abonnement payant avec un accès illimité aux fonctionnalités du recruteur.",
+	"arenella-homepage-title-candidates": "Les candidats",
+	"arenella-homepage-title-fees": "Honoraires et contrats",
+	"arenella-homepage-title-functionality": "Fonctionnalité",
+	"arenella-homepage-title-getting-started": "Commencer",
+	"arenella-homepage-title-intro": "Introduction",
+	"arenella-homepage-title-intro-text": "Arenella-ICT est une plateforme permettant aux recruteurs informatiques de trouver des candidats immédiatement disponibles. Nous proposons une suite de fonctionnalités optimisées pour vous aider à trouver les meilleurs candidats dans les plus brefs délais.",
+	"arenella-homepage-title-pricing": "Plans de tarification",
+	"arenella-homepage-title-pricing-plan-cost": "Coût",
+	"arenella-homepage-title-pricing-plan-credit-desc": "Allocation hebdomadaire de crédits pour accéder aux fonctionnalités du site.",
+	"arenella-homepage-title-pricing-plan-credit-name": "Accès basé sur le crédit",
+	"arenella-homepage-title-pricing-plan-credit-price": "Gratuit",
+	"arenella-homepage-title-pricing-plan-description": "La description",
+	"arenella-homepage-title-pricing-plan-name": "Nom du plan",
+	"arenella-homepage-title-pricing-plan-paid-desc": "Accès illimité à toutes les fonctionnalités Recruiter du site.",
+	"arenella-homepage-title-pricing-plan-paid-name": "Abonnement payant",
+	"arenella-homepage-title-pricing-plan-paid-price": "120 euros par an HT",
 	"arenella-infobox-contact": "Contact",
 	"arenella-listing-btn-back": "Retour",
 	"arenella-listing-btn-create": "Créer une alerte",
@@ -632,8 +657,9 @@
 	"arenella-suggestions-language": "Langues",
 	"arenella-suggestions-paid-subscription-choose-subscription-btn": "Choisissez l'abonnement",
 	"arenella-suggestions-paid-subscription-option": "Fonctionnalité d'abonnement payant",
-	"arenella-suggestions-paid-subscription-text-1": "Cette option n&#39;est disponible que pour les utilisateurs disposant d&#39;un abonnement payant.",
+	"arenella-suggestions-paid-subscription-text-1": "Cette option n'est disponible que pour les utilisateurs disposant d'un abonnement payant.",
 	"arenella-suggestions-paid-subscription-text-2": "Vous pouvez choisir un abonnement payant en cliquant sur le lien suivant",
+	"arenella-suggestions-paid-subscription-text-3": "Total de candidats indisponibles",
 	"arenella-suggestions-permanent": "Perm",
 	"arenella-suggestions-profile-box-contact-btn-send": "Envoyer",
 	"arenella-suggestions-profile-box-contact-hdr": "Message candidat",
