--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -164,12 +164,37 @@
 	"arenella-faqs-q11-answer-nl": "Dutch",
 	"arenella-faqs-q11-answer-summary": "You can filter on candidates that speak the language you are looking for",
 	"arenella-faqs-q11-question": "What languages do the candidates speak",
-	"arenella-home-intro-1": "Arenella-ICT is a platform designed to bring together IT candidates which are actively looking for their next role, with the IT recruiters and hiring manager that \n            are looking to place them. ",
-	"arenella-home-intro-2": "Arenella-ICT is however much more. It is also a meeting place to promote recruiter to recruiter collaboration by providing the opportunity to \n            work together to source and fill roles. We provide the tooling necessary to assist you with this collaboration.",
-	"arenella-home-intro-3": "The site has been developed and refined to automate the tasks you undertake as much as possible. Be that searching for Candidate CVs to download or advertising \n            an open role you are trying to fill. The site employs algorithm and automation techniques to save you time to facilitate you in quickly reaching your goals.",
-	"arenella-home-intro-4": "Arenella-ICT currently focuses on IT Candidates based in the Netherlands, Belgium, the UK and Ireland. The candidates we make available are both based in and have \n            the right to work in one of these locations. ",
-	"arenella-home-sub-title": "IT Candidate CV Database - IT Job board - IT Marketplace",
-	"arenella-home-title": "Welcome to Arenella-ICT",
+	"arenella-homepage-candidates-1": "I candidati hanno caricato il proprio CV sul sito o hanno dato il permesso affinché ciò accadesse con l&#39;intenzione di essere contattati dai reclutatori. I nostri candidati sono aperti a lavorare con i reclutatori e alla ricerca attiva di un nuovo ruolo tramite un&#39;agenzia di reclutamento.",
+	"arenella-homepage-candidates-2": "I candidati non più disponibili vengono rimossi dai risultati della ricerca. Il loro stato viene poi controllato ogni due mesi per determinare se sono diventati disponibili. Il nostro obiettivo è ridurre le spese spese per contattare candidati che non sono attivamente alla ricerca di un ruolo.",
+	"arenella-homepage-candidates-3": "Controlliamo la disponibilità dei candidati all&#39;incirca ogni due settimane per garantire la disponibilità in base al loro stato LI. Una volta che un candidato non è più disponibile, viene rimosso dai risultati della ricerca. Il loro stato viene quindi controllato ogni due mesi per determinare se sono diventati disponibili. Il nostro obiettivo è ridurre le spese spese per contattare candidati che non sono attivamente alla ricerca di un ruolo.",
+	"arenella-homepage-candidates-4": "I candidati risiedono nei Paesi Bassi, Belgio, Regno Unito e Irlanda e hanno il diritto di lavorare. Ci sono candidati per la maggior parte dei tipi di funzioni IT sia su base permanente che freelance. Ci sono candidati di lingua inglese, olandese e francese.\t",
+	"arenella-homepage-fees-1": "Sarai felice di sapere che non sono previsti margini o commissioni aggiuntivi per l&#39;inserimento di un candidato. L&#39;unico pagamento è l&#39;abbonamento annuale nel caso in cui si opti per un abbonamento a pagamento anziché gratuito a credito.",
+	"arenella-homepage-fees-2": "Arenella-ICT è una piattaforma e noi stessi non lavoriamo come un&#39;agenzia di reclutamento. Pertanto quando inserisci un candidato, qualsiasi contratto è tra te e il candidato. Arenella-ICT resta fuori da contratti e trattative.",
+	"arenella-homepage-func-jb-desc": "Una bacheca di lavoro per pubblicizzare ruoli sia per i candidati registrati che per quelli non registrati sulla piattaforma",
+	"arenella-homepage-func-jb-title": "Lavoro",
+	"arenella-homepage-func-market-desc": "Un modo per i reclutatori di collaborare sui ruoli che stanno cercando di ricoprire e sui candidati che stanno cercando di inserire.",
+	"arenella-homepage-func-market-title": "Mercato",
+	"arenella-homepage-func-news-desc": "Informazioni sugli aggiornamenti dei candidati (disponibilità, aggiornamento CV, aggiornamento profilo)",
+	"arenella-homepage-func-news-title": "Notizie",
+	"arenella-homepage-func-suggestions-desc": "Un database CV con algoritmi avanzati per trovare i migliori candidati in pochi secondi.",
+	"arenella-homepage-func-suggestions-title": "Suggerimenti",
+	"arenella-homepage-getting-started": "Il primo passo è creare un account. Ti verrà chiesto il tuo nome, il tuo indirizzo email e il nome dell&#39;azienda. Riceverai una email con i tuoi dati di accesso. Dopo 30 giorni di accesso illimitato hai la possibilità di continuare con un piano gratuito basato sul credito o con un abbonamento a pagamento con accesso illimitato alle funzionalità del reclutatore.",
+	"arenella-homepage-title-candidates": "I candidati",
+	"arenella-homepage-title-fees": "Tariffe e contratti",
+	"arenella-homepage-title-functionality": "Funzionalità",
+	"arenella-homepage-title-getting-started": "Iniziare",
+	"arenella-homepage-title-intro": "Introduzione",
+	"arenella-homepage-title-intro-text": "Arenella-ICT è una piattaforma per i recruiter IT per trovare candidati immediatamente disponibili. Forniamo una suite di funzionalità, ottimizzate per aiutarti a trovare i migliori candidati nel più breve tempo possibile.",
+	"arenella-homepage-title-pricing": "Piani tariffari",
+	"arenella-homepage-title-pricing-plan-cost": "Costo",
+	"arenella-homepage-title-pricing-plan-credit-desc": "Assegnazione settimanale del credito per accedere alle funzionalità del sito.",
+	"arenella-homepage-title-pricing-plan-credit-name": "Accesso basato sul credito",
+	"arenella-homepage-title-pricing-plan-credit-price": "Gratuito",
+	"arenella-homepage-title-pricing-plan-description": "Descrizione",
+	"arenella-homepage-title-pricing-plan-name": "Nome del piano",
+	"arenella-homepage-title-pricing-plan-paid-desc": "Accesso illimitato a tutte le funzionalità di Recruiter sul sito.",
+	"arenella-homepage-title-pricing-plan-paid-name": "Abbonamento a pagamento",
+	"arenella-homepage-title-pricing-plan-paid-price": "120 euro all'anno tasse escluse",
 	"arenella-infobox-contact": "Contatto",
 	"arenella-listing-btn-back": "Indietro",
 	"arenella-listing-btn-create": "Crea avviso",
@@ -634,6 +659,7 @@
 	"arenella-suggestions-paid-subscription-option": "Funzionalità di abbonamento a pagamento",
 	"arenella-suggestions-paid-subscription-text-1": "Questa opzione è disponibile solo per gli utenti con un abbonamento a pagamento.",
 	"arenella-suggestions-paid-subscription-text-2": "Puoi scegliere un abbonamento a pagamento cliccando sul seguente link",
+	"arenella-suggestions-paid-subscription-text-3": "Totale candidati non disponibili",
 	"arenella-suggestions-permanent": "Perm",
 	"arenella-suggestions-profile-box-contact-btn-send": "Inviare",
 	"arenella-suggestions-profile-box-contact-hdr": "Candidato al messaggio",
